# xpdf

./: .gitignore  Makefile.am  configure.ac
doc/: Makefile.am
fofi/: FoFiBase.cc  FoFiEncodings.cc  FoFiEncodings.h  FoFiIdentifier.cc  FoFiIdentifier.h  FoFiTrueType.cc  FoFiType1.cc  FoFiType1.h  FoFiType1C.cc  FoFiType1C.h  Makefile.am
goo/: FixedPoint.cc  GHash.cc  GHash.h  GList.cc  GString.cc  Makefile.am  Trace.cc  Trace.h  gfile.cc  gmem.cc  gmempp.cc  gmempp.h  parseargs.c  parseargs.h
include/: aconf.h.in  xpdfbuild.h.in
include/xpdf/: Makefile.am  xpdf.h
include/xpdf/fofi/: FoFiBase.h  FoFiTrueType.h  Makefile.am
include/xpdf/goo/: FixedPoint.h  GList.h  GMutex.h  GString.h  Makefile.am  gfile.h  gmem.h  gtypes.h
include/xpdf/splash/: Makefile.am  Splash.h  SplashBitmap.h  SplashClip.h  SplashFTFont.h  SplashFont.h  SplashMath.h  SplashTypes.h
include/xpdf/xpdf/: AcroForm.h  Annot.h  Array.h  Catalog.h  CharTypes.h  Dict.h  Error.h  Function.h  Gfx.h  GfxFont.h  GfxState.h  GlobalParams.h  Link.h  Makefile.am  Object.h  OutputDev.h  PDFDoc.h  Page.h  SplashOutputDev.h  Stream.h  TextOutputDev.h  TextString.h  UnicodeMap.h  XRef.h  config.h
splash/: Makefile.am  Splash.cc  SplashBitmap.cc  SplashClip.cc  SplashErrorCodes.h  SplashFTFont.cc  SplashFTFontEngine.cc  SplashFTFontEngine.h  SplashFTFontFile.cc  SplashFTFontFile.h  SplashFont.cc  SplashFontEngine.cc  SplashFontEngine.h  SplashFontFile.cc  SplashFontFile.h  SplashFontFileID.cc  SplashFontFileID.h  SplashGlyphBitmap.h  SplashPath.cc  SplashPath.h  SplashPattern.cc  SplashPattern.h  SplashScreen.cc  SplashScreen.h  SplashState.cc  SplashState.h  SplashXPath.cc  SplashXPath.h  SplashXPathScanner.cc  SplashXPathScanner.h
tools/: HTMLGen.cc  HTMLGen.h  Makefile.am  PSOutputDev.cc  PSOutputDev.h  PreScanOutputDev.cc  PreScanOutputDev.h  WebFont.cc  WebFont.h  pdfdetach.cc  pdftohtml.cc  pdftopng.cc  pdftops.cc  xpdftools.h
xpdf/: AcroForm.cc  Annot.cc  Array.cc  BuiltinFont.cc  BuiltinFont.h  BuiltinFontTables.cc  CMap.cc  CMap.h  Catalog.cc  CharCodeToUnicode.cc  CharCodeToUnicode.h  Decrypt.cc  Decrypt.h  Dict.cc  DisplayState.cc  DisplayState.h  Error.cc  FontEncodingTables.cc  Function.cc  Gfx.cc  GfxFont.cc  GfxState.cc  GlobalParams.cc  HTMLGen.cc  ImageOutputDev.cc  ImageOutputDev.h  JArithmeticDecoder.cc  JArithmeticDecoder.h  JBIG2Stream.cc  JBIG2Stream.h  JPXStream.cc  JPXStream.h  Lexer.cc  Lexer.h  Link.cc  Makefile.am  NameToCharCode.cc  NameToCharCode.h  Object.cc  OptionalContent.cc  (+58 more)
xpdf-qt/: Makefile.am  QtPDFCore.cc  QtPDFCore.h  XpdfApp.cc  XpdfApp.h  XpdfViewer.cc  XpdfViewer.h  XpdfWidget.cc  XpdfWidget.h  XpdfWidgetPrint.cc  XpdfWidgetPrint.h  xpdf.cc
