noinst_LIBRARIES = libsplash.a

AM_CPPFLAGS = -I$(top_srcdir)/include $(FREETYPE2_CFLAGS)

libsplash_a_SOURCES = \
	Splash.cc \
	SplashBitmap.cc \
	SplashClip.cc \
	SplashErrorCodes.h \
	SplashFTFont.cc \
	SplashFTFontEngine.cc SplashFTFontEngine.h \
	SplashFTFontFile.cc SplashFTFontFile.h \
	SplashFont.cc \
	SplashFontEngine.cc SplashFontEngine.h \
	SplashFontFile.cc SplashFontFile.h \
	SplashFontFileID.cc SplashFontFileID.h \
	SplashGlyphBitmap.h \
	SplashPath.cc SplashPath.h \
	SplashPattern.cc SplashPattern.h \
	SplashScreen.cc SplashScreen.h \
	SplashState.cc SplashState.h \
	SplashXPath.cc SplashXPath.h \
	SplashXPathScanner.cc SplashXPathScanner.h \
	$(empty)
