xpdf_includedir = $(pkgincludedir)/xpdf

xpdf_include_HEADERS = \
	AcroForm.h \
	Annot.h \
	Array.h \
	Catalog.h \
	CharTypes.h \
	Dict.h \
	Error.h \
	Function.h \
	Gfx.h \
	GfxFont.h \
	GfxState.h \
	GlobalParams.h \
	Link.h \
	Makefile.am \
	Object.h \
	OutputDev.h \
	PDFDoc.h \
	Page.h \
	SplashOutputDev.h \
	Stream.h \
	TextOutputDev.h \
	TextString.h \
	UnicodeMap.h \
	XRef.h \
	config.h \
	$(empty)

